# intercomm-server

./: .env  .gitignore  Cargo.toml  intercomm.db  itercomm-main.db
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: api.rs  auth.rs  chat.rs  chat_service.rs  db.rs  main.rs  mod.rs
src/entities/: chats.rs  messages.rs  mod.rs  participants.rs  prelude.rs  user_sessions.rs  users.rs
