[workspace]
members = [".", "migration"]

[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
migration = { path = "migration" }

cuid = "1.3.3"
actix-web = "4"
serde = { version = "1.0.208", features = ["derive"] }
oxide-auth-actix = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
actix-rt = "2.5"
url = "2.2"
dotenv = "0.15"
openssl-sys = "0.9.103"
serde_json = "1.0"
jsonwebtoken = "8.2"
chrono = "0.4"

sea-orm = { version = "1.0.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
